app_yaml_files/demo-l4.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-deployment
  labels:
    app: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: gcr.io/google-samples/node-hello:1.0
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: demo-lb
  labels:
    svc: demo-lb
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: demo
  type: LoadBalancer
