app_yaml_files/demo_ns1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-ns1-deployment
  labels:
    app: hackazon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hackazon
  template:
    metadata:
      labels:
        app: hackazon
    spec:
      containers:
      - name: hackazon
        image: ianwijaya/hackazon
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: demo-ns1-lb
  labels:
    svc: demo-ns1-lb
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: hackazon
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ns1ingress
spec:
  ingressClassName: avi-lb
  rules:
  - host: demo-ns1-1.ako.avidemo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: demo-ns1-lb
            port:
              number: 80
  - host: demo-ns1-2.ako.avidemo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: demo-ns1-lb
            port:
              number: 80
